@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5177 2006/09/29 02:46:45 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5178 2006/09/29 13:15:55 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-09-29 21:05 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * harbour/source/rdd/workarea.c
+    * minor modification
+
+  * harbour/source/rdd/dbfcdx/dbfcdx1.c
+    * minor Clipper compatibility update
 
 2006-09-29 09:14 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * source/pp/ppcore.c
